@@ -189,7 +189,7 @@ var $plugins =
 {"name":"AP_Leaderboard","status":true,"description":"","parameters":{}},
 {"name":"--------------------","status":false,"description":"------------------------------------------------------------","parameters":{}},
 {"name":"--------------------","status":false,"description":"------------------------------------------------------------","parameters":{}},
-{"name":"ARP_CommandIcons","status":true,"description":"v1.01 Adds Icons to command windows\r\n<ARP_ComIcons>","parameters":{"Scenes To Draw":"[\"Scene_Menu\",\"Scene_Title\",\"Scene_Equip\",\"Scene_Status\",\"Scene_Item\",\"Scene_Battle\",\"Scene_Shop\",\"Scene_Skill\",\"Scene_GameEnd\",\"Scene_Save\",\"Scene_Load\",\"Scene_Synthesis\",\"Scene_EquipCustomize\",\"Scene_Gameover\",\"Scene_Fishing\"]","Command Icons":"[\"Items: 560\",\"Archaic Hourglass: 280\",\"Skills: 115\",\"Learn Skills: 14\",\"Special: 164\",\"Magic: 165\",\"Passive: 121\",\"Stew: 780\",\"Equipment: 121\",\"Equipment: 162\",\"Status: 234\",\"Team Setup: 121\",\"Quest Log: 230\",\"Music: 1366\",\"Leaderboard: 495\",\"Options: 1363\",\"Save & Load: 1360\",\"Debug: 341\",\"Close Game: 368\",\"To Title: 12\",\"New Game: 224\",\"Load Game: 1361\",\"Tutorial Tips: 1367\",\"Screenshots: 1372\",\"Credits: 495\",\"Shut Down: 6\",\"Equip: 170\",\"Customize: 232\",\"Optimize: 495\",\"Clear: 119\",\"General: 121\",\"Stats: 14\",\"Attributes: 12\",\"Info: 234\",\"Damage Types: 96\",\"States: 104\",\"Cast Line: 116\",\"Equip Rod: 1250\",\"Equip Bait: 1248\",\"Stop Fishing: 12\",\"Items: 261\",\"Key Items: 243\",\"Weapons: 147\",\"Armor: 170\",\"Recovery: 192\",\"Buffs: 269\",\"Debuffs: 319\",\"Materials: 331\",\"Drops: 196\",\"Foodstuffs: 297\",\"Fishing: 1250\",\"Upgraders: 232\",\"Salvaging: 675\",\"Memorabilia: 518\",\"Vanity: 442\",\"Usable: 307\",\"Field: 224\",\"Battle: 551\",\"Misc.: 201\",\"Boost: 187\",\"Unboost: 184\",\"Guard: 13\",\"Fight: 116\",\"Run Away: 12\",\"Buy: 262\",\"Sell: 512\",\"Skills: 115\",\"Sure you quittin'?: 1\",\"Cancel: 119\",\"Load: 1361\",\"Save: 1360\",\"Delete: 119\",\"Rename Save: 1362\",\"Craft Item: 331\",\"Craft Weapon: 391\",\"Craft Armor: 493\",\"Try Again: 338\",\"Give Up: 1\",\"Mining: 276\",\"Farming: 1266\",\"Gathering: 302\",\"Cooking: 1298\",\"Fishing: 1250\",\"Generic: 433\",\"Sword: 389\",\"Greatsword: 398\",\"Axe: 403\",\"Spear: 146\",\"Wand: 417\",\"Spellbook: 1234\",\"Staff: 411\",\"Hammer: 412\",\"Dagger: 150\",\"Knuckles: 408\",\"Gambeson: 434\",\"Chainmail: 1216\",\"Plate Armor: 438\",\"Robes: 440\",\"Vestments: 623\",\"Leathers: 455\",\"Cloak: 450\",\"Light Shield: 160\",\"Heavy Shield: 161\",\"Head Armor: 457\",\"Body Armor: 434\",\"Foot Armor: 467\",\"Offhand: 502\",\"Accessory: 177\",\"Magic Equip: 182\",\"Power: 125\"]","=== WEAPON ICONS ===":"","Draw Weapon Icon":"true","Barehanded Icon":"116","Weapon Unique Icons":"0"}},
+{"name":"ARP_CommandIcons","status":true,"description":"v1.01 Adds Icons to command windows\r\n<ARP_ComIcons>","parameters":{"Scenes To Draw":"[\"Scene_Menu\",\"Scene_Title\",\"Scene_Equip\",\"Scene_Status\",\"Scene_Item\",\"Scene_Battle\",\"Scene_Shop\",\"Scene_Skill\",\"Scene_GameEnd\",\"Scene_Save\",\"Scene_Load\",\"Scene_Synthesis\",\"Scene_EquipCustomize\",\"Scene_Gameover\",\"Scene_Fishing\"]","Command Icons":"[\"Items: 560\",\"Archaic Hourglass: 280\",\"Skills: 115\",\"Learn Skills: 14\",\"Special: 164\",\"Magic: 165\",\"Passive: 121\",\"Stew: 780\",\"Equipment: 121\",\"Equipment: 162\",\"Status: 234\",\"Team Setup: 121\",\"Quest Log: 230\",\"Music: 1366\",\"Leaderboard: 495\",\"Options: 1363\",\"Save & Load: 1360\",\"Debug: 341\",\"Close Game: 368\",\"To Title: 12\",\"New Game: 224\",\"Load Game: 1361\",\"Tutorial Tips: 1367\",\"Screenshots: 1372\",\"Credits: 234\",\"Shut Down: 6\",\"Equip: 170\",\"Customize: 232\",\"Optimize: 495\",\"Clear: 119\",\"General: 121\",\"Stats: 14\",\"Attributes: 12\",\"Info: 234\",\"Damage Types: 96\",\"States: 104\",\"Cast Line: 116\",\"Equip Rod: 1250\",\"Equip Bait: 1248\",\"Stop Fishing: 12\",\"Items: 261\",\"Key Items: 243\",\"Weapons: 147\",\"Armor: 170\",\"Recovery: 192\",\"Buffs: 269\",\"Debuffs: 319\",\"Materials: 331\",\"Drops: 196\",\"Foodstuffs: 297\",\"Fishing: 1250\",\"Upgraders: 232\",\"Salvaging: 675\",\"Memorabilia: 518\",\"Vanity: 442\",\"Usable: 307\",\"Field: 224\",\"Battle: 551\",\"Misc.: 201\",\"Boost: 187\",\"Unboost: 184\",\"Guard: 13\",\"Fight: 116\",\"Run Away: 12\",\"Buy: 262\",\"Sell: 512\",\"Skills: 115\",\"Sure you quittin'?: 1\",\"Cancel: 119\",\"Load: 1361\",\"Save: 1360\",\"Delete: 119\",\"Rename Save: 1362\",\"Craft Item: 331\",\"Craft Weapon: 391\",\"Craft Armor: 493\",\"Try Again: 338\",\"Give Up: 1\",\"Mining: 276\",\"Farming: 1266\",\"Gathering: 302\",\"Cooking: 1298\",\"Fishing: 1250\",\"Generic: 433\",\"Sword: 389\",\"Greatsword: 398\",\"Axe: 403\",\"Spear: 146\",\"Wand: 417\",\"Spellbook: 1234\",\"Staff: 411\",\"Hammer: 412\",\"Dagger: 150\",\"Knuckles: 408\",\"Gambeson: 434\",\"Chainmail: 1216\",\"Plate Armor: 438\",\"Robes: 440\",\"Vestments: 623\",\"Leathers: 455\",\"Cloak: 450\",\"Light Shield: 160\",\"Heavy Shield: 161\",\"Head Armor: 457\",\"Body Armor: 434\",\"Foot Armor: 467\",\"Offhand: 502\",\"Accessory: 177\",\"Magic Equip: 182\",\"Power: 125\"]","=== WEAPON ICONS ===":"","Draw Weapon Icon":"true","Barehanded Icon":"116","Weapon Unique Icons":"0"}},
 {"name":"ARP_TitleCommandExit","status":true,"description":"v1.00 Adds an option in the title command window to close\r\ngame window.","parameters":{"Command Exit":"Shut Down","Show Exit":"true"}},
 {"name":"Irina_AutoMessageColor","status":true,"description":"<AutoMessageColor> RPG Maker MV version 1.6.2","parameters":{"TextCodeHighlighting":"","TextCodeBase":"..........","TCActorName":"1","TCPartyName":"1","TextCodeYepMsgCore":"..........","TCActorClass":"4","TCActorNickname":"4","TCPartyClass":"4","TCPartyNickname":"4","TCClassName":"5","TCItemName":"3","TCWeaponName":"3","TCArmorName":"3","TCEnemyName":"3","TCSkillName":"3","TCStateName":"3","TCItemIcon":"3","TCWeaponIcon":"3","TCArmorIcon":"3","TCSkillIcon":"3","TCStateIcon":"3","TextCodeYepExtMsg1":"..........","TCEnemyNamePack1":"4","TCEnemyTroop":"4","":"","WordHighlighting":"","TextColor1":"[]","TextColor2":"[]","TextColor3":"[]","TextColor4":"[]","TextColor5":"[]","TextColor6":"[]","TextColor7":"[]","TextColor8":"[]","TextColor9":"[]","TextColor10":"[]","TextColor11":"[]","TextColor12":"[]","TextColor13":"[]","TextColor14":"[]","TextColor15":"[]","TextColor16":"[]","TextColor17":"[]","TextColor18":"[\"Apocalypse\"]","TextColor19":"[]","TextColor20":"[]","TextColor21":"[]","TextColor22":"[]","TextColor23":"[]","TextColor24":"[]","TextColor25":"[]","TextColor26":"[]","TextColor27":"[]","TextColor28":"[]","TextColor29":"[]","TextColor30":"[]","TextColor31":"[]"}},
 {"name":"CP_Large_Sprite_Fix","status":true,"description":"Fixes an issue with large sprites appearing under ☆ passability tiles.","parameters":{"Terrain ID":"7","Large Followers":"Yes","Large Vehicles":"Yes"}},
