@@ -8,6 +8,7 @@ INTRO TEXT
 
 Additions:
  - Added leaderboard for Enemies Defeated.
+ - Added leaderboard command on title screen.
  - Discord rich presence displays turn count in battle.
 
 Changes:
